--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,13 @@ dependencies {
 
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation 'com.github.bumptech.glide:glide:4.4.0'
 
-    implementation 'com.github.florent37:camerafragment:1.0.8'
+    compile 'com.otaliastudios:cameraview:1.4.1'
 
     implementation 'gun0912.ted:tedpermission:1.0.3'
 
